--- a/package.json
+++ b/package.json
@@ -3,29 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@reduxjs/toolkit": "^1.4.0",
+    "@craco/craco": "^6.0.0",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.5.0",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^9.8.6",
     "firebase": "^7.24.0",
     "postcss": "^7.0.35",
-    "postcss-cli": "^8.3.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-redux": "^7.2.1",
-    "react-scripts": "3.4.3",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
+    "react-redux": "^7.2.2",
+    "react-scripts": "^4.0.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:css": "postcss src/style/tailwind.css -o src/style/main.css",
-    "build:watch": "postcss src/style/tailwind.css -o src/style/main.css --watch"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
