--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@webscopeio/react-textarea-autocomplete": "^4.7.3",
     "autoprefixer": "^9.8.6",
+    "emoji-mart": "^3.0.0",
     "firebase": "^7.24.0",
     "moment": "^2.29.1",
     "postcss": "^7.0.35",
