--- a/client/.gitignore
+++ b/client/.gitignore
@@ -22,8 +22,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-firebase.js
 .firebaserc
 firebase.json
 .firebase/
 .eslintcache
+build
+node_modules
+.env
