--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   },
